// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CogniteError extra field 1`] = `
"Abc | code: 500
Missing:
  {\\"id\\":4190022127342195}
  {\\"externalId\\":\\"abc\\"}
Duplicated:
  {\\"externalId\\":\\"string\\",\\"startTime\\":0,\\"endTime\\":0,\\"description\\":\\"string\\",\\"source\\":\\"string\\"}"
`;

exports[`handleErrorResponse extra fields 1`] = `
"abc | code: 500 | X-Request-ID: def
Missing:
  {\\"id\\":4190022127342195}
  {\\"externalId\\":\\"abc\\"}
Duplicated:
  {\\"externalId\\":\\"string\\",\\"startTime\\":0,\\"endTime\\":0,\\"description\\":\\"string\\",\\"source\\":\\"string\\"}"
`;
